--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for exim4
-exim4_dc_eximconfig_configtype: 'internet'
-exim4_dc_other_hostnames: "{{ inventory_hostname }}"
+exim4_dc_eximconfig_configtype: 'local'
+exim4_dc_other_hostnames: "{{ ansible_hostname }}"
 exim4_dc_local_interfaces: '127.0.0.1 ; ::1'
 exim4_dc_readhost: ''
 exim4_dc_relay_domains: ''
