--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,9 +2,9 @@
 # handlers file for exim4
 - name: update exim4.conf
   shell: /usr/sbin/update-exim4.conf
-  sudo: true
+  become: true
 
   # Exim4
 - name: restart exim4
   action: service name=exim4 state=restarted
-  sudo: true
+  become: true
