--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,13 @@
 # tasks file for exim4
 - name: Install Exim4 package
   apt: name=exim4 state=present
-  sudo: true
+  become: true
   tags:
     - exim
 
 - name: Exim4 Configuration
   template: src=update-exim4.conf.j2 dest=/etc/exim4/update-exim4.conf.conf
-  sudo: true
+  become: true
   tags:
     - exim
   notify:
