--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,17 @@
 ---
 # tasks file for exim4
 - name: Install Exim4 package
-  apt: name=exim4 state=present
+  apt: 
+    name: exim4 
+    state: present
   become: true
   tags:
     - exim
 
 - name: Exim4 Configuration
-  template: src=update-exim4.conf.j2 dest=/etc/exim4/update-exim4.conf.conf
+  template:
+    src: 'update-exim4.conf.j2'
+    dest: '/etc/exim4/update-exim4.conf.conf'
   become: true
   tags:
     - exim
@@ -16,15 +20,22 @@
     - restart exim4
 
 - name: Create catch all configuration
-  template: src=01_exim4-config_catch_all dest=/etc/exim4/conf.d/router/01_exim4-config_catch_all
+  template: 
+    src: '01_exim4-config_catch_all' 
+    dest: '/etc/exim4/conf.d/router/01_exim4-config_catch_all'
   when: (exim4_catch_all_email is defined) and exim4_catch_all_email
   notify: update exim4.conf
 
 - name: Delete catch all configuration
-  file: path=/etc/exim4/conf.d/router/01_exim4-config_catch_all state=absent
+  file:
+    path: /etc/exim4/conf.d/router/01_exim4-config_catch_all
+    state: absent
   when: (not exim4_catch_all_email is defined) or (not exim4_catch_all_email)
   notify: update exim4.conf
 
 - name: Create /etc/passwd.client
-  template: src=passwd.client dest=/etc/exim4/passwd.client group=Debian-exim
+  template: 
+    src: passwd.client
+    dest: /etc/exim4/passwd.client 
+    group: Debian-exim
   notify: update exim4.conf
