--- a/.travis.yml
+++ b/.travis.yml
@@ -44,5 +44,18 @@ script:
   # Test the Ansible role.
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml'
 
+  # Test role idempotence.
+  - idempotence=$(mktemp)
+  - docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml | tee -a ${idempotence}
+  - >
+    tail ${idempotence}
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
+
+  # Test if exim is working.
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ps waux | grep [e]xim'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm exim -bV'
+
 notifications:
   # Notify Ansible Galaxy when a role builds successfully.
