renamed OS specific task files

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,9 +9,11 @@
 
 # Setup/install tasks.
 - include: setup-RedHat.yml
+  static: yes
   when: ansible_os_family == 'RedHat'
 
 - include: setup-Debian.yml
+  static: yes
   when: ansible_os_family == 'Debian'
 
 
