fixed stray quote in OS apt task

--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -3,5 +3,5 @@
 - name: Ensure exim is installed.
   apt:
     name: "{{ exim_daemon }}"
-    state: installed"
+    state: installed
     update_cache: yes
