fix deprecation warning for ansible 2.5.x

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,16 @@
 ---
-# tasks file for exim4
-
 # Include variables and define needed variables.
 - name: Include OS-specific variables.
   include_vars: "{{ ansible_os_family }}.yml"
-  tags: ['always']
-
+  tags:
+    - always
 
 # Setup/install tasks.
-- include: setup-RedHat.yml
-  static: yes
+- import_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
-- include: setup-Debian.yml
-  static: yes
+- import_tasks: setup-Debian.yml
   when: ansible_os_family == 'Debian'
-
 
 - name: Exim4 Configuration
   template:
@@ -51,7 +46,7 @@
     src: passwd.client
     dest: "{{ exim_path }}/passwd.client"
     group: "{{ exim_group }}"
-  when: '{{ ansible_os_family == "Debian" }}'
+  when: ansible_os_family == "Debian"
   tags:
     - exim
   notify: update exim4.conf
