change to splitconfig as catch_all requires it

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,7 +9,7 @@ exim4_dc_minimaldns: 'false'
 exim4_dc_relay_nets: ''
 exim4_dc_smarthost: ''
 exim4_CFILEMODE: '644'
-exim4_dc_use_split_config: 'false'
+exim4_dc_use_split_config: 'true'
 exim4_dc_hide_mailname: ''
 exim4_dc_mailname_in_oh: 'true'
 exim4_dc_localdelivery: 'mail_spool'
