--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -3,4 +3,9 @@
 exim_daemon: exim
 exim_group: 'mail'
 exim_path: '/etc/exim'
-exim_configuration_file: '/etc/exim/exim.conf'
+exim_configuration_file: 'exim.conf'
+
+epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
+epel_repo_gpg_key_url: "https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}"
+epel_repofile_path: "/etc/yum.repos.d/epel.repo"
+
